# TrainKeeper

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  PACKAGE_README.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  data_corruption.py  drift_simulation.py  instability_injection.py  reproducibility.py
benchmarks/real/: __init__.py  aggregate_results.py  nlp_glue.py  report.py  run_all.py  tabular_openml.py  utils.py  vision_cifar.py
docs/: ADVANCED_FEATURES.md  architecture.md  benchmark_plan.md  benchmarks.md  blog_post_distributed.md  hypotheses.md  index.md  packaging.md  research_problem.md
examples/: dashboard_demo.py  datacheck_drift.py  demo.py  distributed_training_example.py  gpu_profiling_example.py  official_demo.py  production_training_example.py  quickstart.py
examples/integration/: llm_finetuning.py  transformers_example.py  vit_example.py
scenarios/scenario1_reproducibility/: README.md  train.py
scenarios/scenario2_data_integrity/: README.md  run_all.py
scenarios/scenario2_data_integrity/pipeline/: dataloader.py  features.py  train.py
scenarios/scenario3_training_robustness/: README.md  run_all.py
scenarios/scenario3_training_robustness/pipeline/: train.py
system_tests/: runner.py
tests/: test_datacheck.py  test_experiment.py  test_trainutils.py
trainkeeper/tests/: test_ab_testing.py  test_automl.py  test_checkpoint_manager.py  test_data.py  test_distributed.py  test_drift.py  test_experiment_drift.py  test_gpu_profiler.py  test_monitoring.py  test_preprocessing.py  test_reports.py  test_serving.py  test_storage.py  test_streaming.py  test_validation.py
trainkeeper/trainkeeper/: __init__.py  __main__.py  ab_testing.py  checkpoint_manager.py  cli.py  data.py  datacheck.py  debugger.py  diagnostics.py  distributed.py  drift.py  experiment.py  gpu_profiler.py  monitor.py  monitoring.py  notebook.py  pkg.py  preprocessing.py  reports.py  repro.py  serving.py  storage.py  streaming.py  trainutils.py  validation.py
trainkeeper/trainkeeper/automl/: __init__.py  tuner.py
trainkeeper/trainkeeper/dashboard/: __init__.py  app.py
trainkeeper/trainkeeper/dashboard/components/: __init__.py  drift_visualizer.py  experiment_explorer.py  metric_plotter.py  system_monitor.py
trainkeeper/trainkeeper/dashboard/static/: custom.css
trainkeeper/trainkeeper/templates/basic/: .gitignore  README.md  train.py
trainkeeper/trainkeeper/templates/basic/.github/workflows/: repro.yml
