 [build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
 
[project]
name = "trainkeeper"
version = "0.1.1"
description = "Minimal-decision tools for reproducible, debuggable training experiments."
readme = "PACKAGE_README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{name = "Mohamed Salem"}]
dependencies = [
   "pyyaml>=6.0",
   "numpy>=1.23",
   "pandas>=1.5",
 ]
 
 [project.optional-dependencies]
 torch = ["torch>=2.0"]
vision = ["torchvision"]
nlp = ["datasets", "transformers", "torch"]
tabular = ["scikit-learn", "openml"]
wandb = ["wandb>=0.16"]
mlflow = ["mlflow>=2.9"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "mkdocs>=1.5", "mkdocs-material>=9.0"]
bench = ["matplotlib>=3.7"]
 
 [project.scripts]
 tk = "trainkeeper.cli:main"
 
 [tool.setuptools]
 include-package-data = true
 
 [tool.setuptools.package-data]
 "trainkeeper" = ["templates/basic/**"]
 
 [tool.setuptools.packages.find]
 where = ["trainkeeper"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 addopts = "-q"
