 [build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
 
[project]
name = "trainkeeper"
version = "0.3.0"
description = "Production-grade ML training toolkit with distributed training, GPU profiling, smart checkpointing, and interactive dashboards"
readme = "PACKAGE_README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{name = "Mohamed Salem"}]
dependencies = [
   "pyyaml>=6.0",
   "numpy>=1.23",
   "pandas>=1.5",
   "requests>=2.28",
 ]

[project.optional-dependencies]
torch = ["torch>=2.0"]
vision = ["torchvision"]
nlp = ["datasets", "transformers", "torch"]
tabular = ["scikit-learn", "openml"]
wandb = ["wandb>=0.16"]
mlflow = ["mlflow>=2.9"]
dashboard = ["streamlit>=1.28", "plotly>=5.17", "pyyaml>=6.0"]
serving = ["onnx>=1.14", "onnxruntime>=1.15", "torch-model-archiver>=0.7"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "mkdocs>=1.5", "mkdocs-material>=9.0", "ruff>=0.1.0"]
bench = ["matplotlib>=3.7"]
all = ["torch>=2.0", "streamlit>=1.28", "plotly>=5.17", "wandb>=0.16", "mlflow>=2.9", "onnx>=1.14"]
 
 [project.scripts]
 tk = "trainkeeper.cli:main"
 
 [tool.setuptools]
 include-package-data = true
 
 [tool.setuptools.package-data]
 "trainkeeper" = ["templates/basic/**"]
 
 [tool.setuptools.packages.find]
 where = ["trainkeeper"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests", "trainkeeper/tests"]
 addopts = "-q"
